Revision history for OpenTelemetry

{{$NEXT}}

0.030     2025-05-07 23:28:24 BST

    * Fixed some minor formatting errors in
      OpenTelemetry::Guides::Instrumentation.
    * The logger used internally now defaults to carping to STDERR at a
      warning level. The log level can be adjusted by setting the
      OTEL_PERL_INTERNAL_LOG_LEVEL environment variable to a suitable
      value. This internal logger is weaker than a regular
      Log::Any::Adapter and can be modified either by setting a
      Log::Any::Adapter or the LOG_ANY_DEFAULT_ADAPTER environment
      variable appropriately. Note that OTEL_PERL_INTERNAL_LOG_LEVEL will
      be ignored if an adapter is manually set.

0.029     2025-04-05 18:00:22+01:00 Europe/London

    * Fix an issue introduced in 0.028 that would cause Perl 5.30
      to interpret some function calls as indirect method calls and
      die.

0.028     2025-04-05 13:42:43+01:00 Europe/London

    * Removed arguments from OpenTelemetry::Context constructors, since
      these could bypass the key validation.
    * The 'set' method for OpenTelemetry::Context now accepts multiple
      pairs, and for consistency the 'delete' method accepts multiple keys.

0.027     2024-12-20 17:31:04+00:00 Europe/London

    * Fixed some minor nits in the documentation
    * Add 'isa' as a dependency and reduce the minimum supported Perl
      version to 5.30. If you are running 5.30 please consider installing
      Type::Tiny::XS which should improve the performance of these 'isa'
      checks.

0.026     2024-12-16 09:02:42+00:00 Europe/London

    * Added some practical documentation in the OpenTelemetry::Guides
      namespace, based on the language documentation by the OpenTelemtry
      authors. Examples used in those documents has also been added to
      the examples directory in this distribution. In the future, this
      namespace will expand to include more guides.
    * Renamed OpenTelemetry::Integration namespace to